src/App.css
@import url('https://fonts.googleapis.com/css?family=Roboto+Slab');

body {
  background: #f5f5f5;
  color: #555555;
  font-family: 'Roboto Slab';
}

.container {
  
}

.blue {
  color: #5882E3;
}
.gray {
   color: #ced4da;
}
.black {
  color: #343a40;
}

.living-room {
  background-color: #17a2b8;
}
.backyard {
  background-color: #28a745;
}
.kitchen {
  background-color: #ffc107;
}

.timeline-entry {
  background-color: #fff;
}

.h4 {
  background-color: initial;
}

.btn-black {
  background-color: #343a40;
  color: #fff;
}

.timeline-panel {
  border-top: solid #ced4da;
  border-bottom: solid #ced4da;
}

.color-area-panel {
  font-size: 0.7rem;
}

.card {
  border: initial;
  background: initial;
}

.card-body {
  width: 200px;
}

.card.color-area:first-child {
  margin-left: auto;
}

